fixed header spacing added divs for 5 main webpage sections

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-left: 200px;
+    padding-right: 200px;
 }
 
 a {
